<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".AddFood">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_emoji_food_beverage_24"
            android:id="@+id/image"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Add Image"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border">

            <!-- INPUT -->
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:hint="Food Name"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp" />

            <!-- ICON -->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border">

            <!-- INPUT -->
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:hint="Description"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp" />

            <!-- ICON -->


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border">

            <!-- INPUT -->
            <EditText
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:hint="Rating"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border">

            <!-- INPUT -->
            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:hint="Price"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp" />


        </RelativeLayout>




        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="#EAECEF"
            android:layout_gravity="center"
            android:textSize="12sp" />




    </LinearLayout>

</LinearLayout>