...
                    android:background="#464749"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/profileview"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:layout_width="match_parent"
...
                    android:background="#464749"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/aboutview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:layout_width="match_parent"
...
