<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:background="@drawable/background"
    tools:context=".SignupActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_heading"
        >
        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create an Account"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            />

        <ImageView
            android:id="@+id/imagess"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="18dp"
            android:src="@drawable/ic_person" />

        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_border"
            android:layout_height="wrap_content"
            android:id="@+id/etFname"
            android:hint="First Name"
            android:gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_border"
            android:layout_height="wrap_content"
            android:id="@+id/etLname"
            android:hint="Last Name"
            android:gravity="center"/>

                <RadioGroup
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:id="@+id/Male"/> <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:id="@+id/Female"/> <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Others"
                        android:id="@+id/Others"/>

                </RadioGroup>
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_border"
            android:layout_height="wrap_content"
            android:id="@+id/etAddress"
            android:hint="Address"
            android:gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_border"
            android:layout_height="wrap_content"
            android:id="@+id/etPhone"
            android:hint="Phone Number"
            android:gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_border"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:hint="Email"
            android:gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_border"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:hint="Username"
            android:gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_border"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:hint="Password"
            android:gravity="center"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/etCPassword"
            android:background="@drawable/blue_border"
            android:hint="Confirm Password"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
        android:id="@+id/btnReg"
            android:text="Regsiter"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
        android:id="@+id/btnLogin"
            android:text="Login"/>

    </LinearLayout>



</ScrollView>