<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:orientation="vertical"

        >


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Email"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:inputType="text"
            />



        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Password"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:backgroundTint="#808080"
            android:textSize="15sp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@color/black"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.7"
            style="?android:attr/borderlessButtonStyle"
            android:elevation="2dp"
            />



    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>